# cli

./: CODE_REVIEW.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  tests.yml
ci/: Cargo.toml
ci/src/cli/: mod.rs
ci/tests/: test_cli.rs
codeinput/: Cargo.toml
codeinput/src/benches/: resolver_bench.rs
codeinput/src/core/: cache.rs  common.rs  inline_parser.rs  mod.rs  parser.rs  smart_iter.rs  types.rs
codeinput/src/core/commands/: infer_owners.rs  inspect.rs  parse.rs
codeinput/src/utils/: app_config.rs  error.rs  logger.rs
